--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,13 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^2.30.1
+  firebase_messaging: ^14.9.1
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^17.1.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
